# nixos-config

./: .gitattributes  .gitignore  .gitmodules  .sops.yaml  LICENSE  README.md  common.nix  configuration.nix  flake.nix  folders.sh  garnix.yaml  gf.nix  gui.old.nix  hyprland.lua  installer.nix  orga.excalidraw  overlay.nix  private.template.nix  pulsemixer.toml  rebuild.sh  secrets.nix  user.nix  user.sh  zshrc.sh
folders/: usb.link.sh
home/: audio.nix  cerebro.nix  chimera.nix  compositing.nix  default.nix  gaming.nix  gf.nix  griffin.nix  helix.nix  hyprland-knight.nix  hyprland.nix  i3-mini.nix  i3.nix  live.nix  media.nix  model.nix  neovim.nix  onagre.nix  options.nix  photo.nix  retrogaming.nix  rofi.nix  social.nix  sway.nix  video.nix  virtualization.nix  waybar.nix  wayland.nix  window-manager.nix  zsh.nix
home-manager/: gf.nix
home/shell/environment.flake/c-cpp/: CMakeLists.txt  flake.nix
homes.nix/: gui.nix
neovim/: key.lua  set.lua
old/: 0desktop.nix  1framework-laptop.nix  3apache-server.nix  4mysql-server.nix  common.nix  framework-hardware.nix  gf.nix  gui.nix  helix.nix  i3.nix  laptop.nix  localhost.nix  musnix.nix  ninja.old.nix  zsh.nix
overlay/: 7zz.nix  bambu.nix  default.nix  example.nix  freecad.nix
partitioning/: btrfs1.nix
private/: flake.nix  user.nix
script/: clean-thunderbird.sh  dl  fingerprints-enroll.sh  firewall-disable.sh  folders.sh  gf  (+9 more)
script+data/: cerebro.json  class-terminal.sh  extract.sh  fingerprints-enroll.sh  home-folders.sh  hyprpaper.conf  present-pdf.sh  smart-terminal.sh  typst-env.sh  xplr.lua  zshrc.sh
(+542 files in other folders)
